add read reviews endpoint
